--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
 Deze regel is in de main toegevoegd
+Dit is een test regel
+Dit een tweede
+Deze regel is door een andere branch in de main branch gekomen.
